# auth-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py  utils.py
accounts/api/: urls.py
accounts/api/v1/: serializers.py  urls.py  views.py
accounts/api/v1/tests/: factory.py  test_views.py
accounts/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py
auth_system/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
products/: admin.py  apps.py  models.py
products/api/: urls.py
products/api/v1/: serializers.py  urls.py  views.py
products/api/v1/tests/: factory.py  test_views.py
products/migrations/: 0001_initial.py
roles/: admin.py  apps.py  models.py  permissions.py
roles/api/: urls.py
roles/api/v1/: serializers.py  urls.py  views.py
roles/api/v1/tests/: factory.py  test_views.py
roles/migrations/: 0001_initial.py  0002_role_is_admin.py
